--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,11 @@ body
     margin: 0;
     padding: 0;
 }
+a
+{
+    text-decoration: none;
+    cursor: pointer;
+}
 
 header
 {
@@ -16,4 +21,20 @@ header nav
 {
     display: flex;
     justify-content: flex-end;
+}
+
+header nav .nav-right-section
+{
+    width: 250px;
+    height:auto;
+    display: flex;
+    list-style:none;
+    justify-content: center;
+    align-items: center;
+}
+
+nav .nav-right-section a
+{
+    color:#000000;
+    margin-right:10px;
 }
