--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,20 @@ nav .nav-right-section a
     color:#000000;
     margin-right:10px;
 }
+
+nav .nav-right-section .menu-icon
+{
+    background-image: url('https://static.thenounproject.com/png/756729-200.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width:25px;
+    height: 25px;
+    margin-right:5px;
+}
+
+nav .nav-right-section img
+{
+    width: 32px;
+    height: 32px;
+}
