--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,21 @@ nav .nav-right-section img
     width: 32px;
     height: 32px;
 }
+
+main
+{
+    margin-top: 150px;
+    text-align: center;
+}
+
+main .main-logo
+{
+    width:530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+main .main-logo img
+{
+    width:355px;
+}
