--- a/css/main.css
+++ b/css/main.css
@@ -73,3 +73,28 @@ main .main-logo img
 {
     width:355px;
 }
+
+main .main-input
+{
+    margin: 0 auto;
+    margin-bottom: 35px;
+    width:530px;
+}
+
+main .main-input-container
+{
+    width:525px;
+    border-radius: 100px;
+    border:1px solid #dfe1e5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .main-input input
+{
+    width: 450px;
+    height: 40px;
+    border:none;
+    outline: none;
+}
