--- a/css/main.css
+++ b/css/main.css
@@ -157,3 +157,41 @@ main .main-buttons button:hover
     color: #000;
     box-shadow: 0 1px 1px #fff;
 }
+
+footer
+{
+    height: 50px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 13px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+
+footer ul
+{
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+}
+
+footer .footer-left
+{
+    justify-self: left;
+}
+
+footer .footer-right
+{
+    justify-self: right;
+}
+
+footer ul li a
+{
+    color: #5f6368;
+    margin: 10px;
+}
